# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./profile";
 export * from "./categories";
 export * from "./content";
 export * from "./purchases";
+export * from "./inquiries";
